--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=/home/emontoya/.netbeans/8.1/config/GlassFishEE6/Properties/gfv3-1891332779.properties
+deploy.ant.properties.file=/Users/emontoya/Library/Application Support/NetBeans/8.1/config/GlassFishEE6/Properties/gfv3315458821.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/opt/nb-glassfish-4.1.1/glassfish/domains/domain1
-j2ee.server.home=/opt/nb-glassfish-4.1.1/glassfish
-j2ee.server.instance=[/opt/nb-glassfish-4.1.1/glassfish:/opt/nb-glassfish-4.1.1/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:9848
-j2ee.server.middleware=/opt/nb-glassfish-4.1.1
-user.properties.file=/home/emontoya/.netbeans/8.1/build.properties
+j2ee.server.domain=/Applications/NetBeans/glassfish-4.1.1/glassfish/domains/domain1
+j2ee.server.home=/Applications/NetBeans/glassfish-4.1.1/glassfish
+j2ee.server.instance=[/Applications/NetBeans/glassfish-4.1.1/glassfish:/Applications/NetBeans/glassfish-4.1.1/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=/Applications/NetBeans/glassfish-4.1.1
+user.properties.file=/Users/emontoya/Library/Application Support/NetBeans/8.1/build.properties
